--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+   
   shared_preferences: ^2.0.20
 
   pinput: ^2.2.12
@@ -44,6 +44,7 @@ dependencies:
   firebase_messaging: ^14.2.1
   firebase_auth: ^4.2.5
   device_preview: ^1.1.0
+  postgres: ^2.5.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
